updated HTML & CSS, added new graphics to assets, completed steps & values sections. corrected spacing and formating in images.

--- a/styles.css
+++ b/styles.css
@@ -62,7 +62,7 @@ h3 {
 }
 
 .section__tag {
-  font-size: 18px;
+  font-size: 16px;
   font-weight: 500;
   color: #6315ff;
 }
@@ -300,14 +300,14 @@ QUALITY
 .quality__description,
 .quality__img--wrapper {
   flex: 0 0 50%;
-  max-width: 576px
+  max-width: 576px;
 }
 
 .quality__description {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  gap: 24px
+  gap: 24px;
 }
 
 .quality__img--wrapper {
@@ -341,4 +341,173 @@ QUALITY
 
 #quality .btn {
   width: 25%;
+}
+
+/* ==========
+STEPS
+========== */
+
+#steps .row {
+  display: flex;
+  gap: 24px;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.steps__description,
+.steps__img--wrapper {
+  width: 50%;
+}
+
+.steps__img--wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+}
+
+.steps__img {
+  z-index: 2;
+}
+
+.steps__grid {
+  position: absolute;
+  bottom: -100px;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 10rem;
+  height: 10rem;
+  opacity: 0.8;
+  z-index: -10;
+  color: rgb(100, 21, 255);
+  fill: currentColor;
+}
+
+.steps__description {
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+}
+
+.step {
+  display: flex;
+  align-items: flex-start;
+  gap: 16px;
+}
+
+.step__number {
+  color: #cbd5e0;
+  font-size: 36px;
+  font-weight: 600;
+  line-height: 1;
+  width: 48px;
+  text-align: right;
+}
+
+.step__description {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  max-width: 320px;
+}
+
+.step__title {
+  font-weight: 600;
+  font-size: 20px;
+  color: #243e63;
+  line-height: 1;
+}
+
+.step__para {
+  font-size: 14px;
+  color: #718096;
+  font-weight: 500;
+  line-height: 2;
+}
+
+/* ==========
+VALUES
+========== */
+
+#values .row {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+}
+
+.values__description,
+.values__img--wrapper {
+  width: 50%;
+}
+
+.values__description {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+}
+
+.section__para {
+  width: 100%;
+  max-width: 400px;
+}
+
+.values__list {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 32px;
+}
+
+.value {
+  display: flex;
+  align-items: flex-start;
+  gap: 12px;
+}
+
+.value__description {
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+}
+
+.value__img--wrapper {
+  width: 64px;
+  height: 64px;
+}
+
+.value__img {
+  border: none;
+  border-radius: 50%;
+  padding: 4px;
+}
+
+.value__img--affordable {
+  background-color: rgb(45, 206, 112);
+}
+
+.value__img--professionalism {
+  background-color: rgb(219, 80, 80);
+}
+
+.value__title {
+  font-weight: 600;
+  font-size: 20px;
+  color: #243e63;
+  line-height: 1;
+}
+
+.value__para {
+  font-size: 14px;
+  color: #718096;
+  font-weight: 500;
+  line-height: 1.5;
+}
+
+#values .btn {
+  width: 25%;
+}
+
+.values__img--wrapper {
+  width: 100%;
+  max-width: 640px;
 }
